--- a/transportador/transportador.properties
+++ b/transportador/transportador.properties
@@ -1,1 +1,4 @@
-
+#datasource
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/transportador
+spring.datasource.username=root
