--- a/fornecedor/fornecedor.properties
+++ b/fornecedor/fornecedor.properties
@@ -2,4 +2,4 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/fornecedor
 spring.datasource.username=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
